<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timing"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/timing" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/finance" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/courses" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
