<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.krintos.timeandfinance.Fragments.Finance.Category.Add.add_to_spent">

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Spinner>
    <EditText
        android:id="@+id/add_new_category"
        android:visibility="gone"
        android:hint="@string/add_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/description"
        android:hint="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/pickDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:src="@drawable/ic_date_range_black_24dp"/>
        <TextView
            android:layout_weight="3.0"
            android:id="@+id/showdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:hint="@string/amount"
            android:inputType="none|number" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/add"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>

</LinearLayout>
