<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/ask"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/delete"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"/>
        <ImageView
            android:id="@+id/change"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/change"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/showchange"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/change"/>
        </LinearLayout>
        <in.goodiebag.carouselpicker.CarouselPicker
            android:id="@+id/iconpicker"
            app:items_visible="three"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_new_category"
            android:textAlignment="center"
            android:layout_margin="15dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel"
                android:layout_weight="1.0"
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>