<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ask"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="1.0"
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/delete"/>
        <ImageView
            android:id="@+id/change"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/change"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/changelayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>
        <EditText
            android:id="@+id/description"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="9.0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/pickDate"
                android:layout_weight="4.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/showdate"
                android:layout_weight="3.0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="2.0"
                android:id="@+id/amount"
                android:hint="@string/amount"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel"
                android:layout_weight="1.0"
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="match_parent"
                android:layout_weight="1.0"
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>